// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > admin/alter-database.sql 1`] = `
"alter database SalesDB
set automatic_index_compaction = on;

alter database SalesDB
set automatic_index_compaction = off;"
`;

exports[`fixtures > admin/backup-restore.sql 1`] = `
"backup database Bookstore
  to disk = N'C:\\Backups\\Bookstore_Full.bak'
  with noformat, init, name = N'Bookstore Full Backup', stats = 10;

backup database Bookstore
  to disk = N'C:\\Backups\\Bookstore_Full_1.bak',
  disk = N'C:\\Backups\\Bookstore_Full_2.bak'
  with compression, checksum;

backup log Bookstore
  to disk = N'C:\\Backups\\Bookstore_Log.bak'
  with norecovery;

restore database Bookstore
  from disk = N'C:\\Backups\\Bookstore_Full.bak'
  with norecovery;

restore database Bookstore
  from disk = N'C:\\Backups\\Bookstore_Full.bak'
  with
    move N'Bookstore_Data' to N'C:\\Data\\Bookstore.mdf',
    move N'Bookstore_Log' to N'C:\\Data\\Bookstore.ldf',
    recovery,
    stats = 5;

restore log Bookstore
  from disk = N'C:\\Backups\\Bookstore_Log.bak'
  with recovery;

restore filelistonly
  from disk = N'C:\\Backups\\Bookstore_Full.bak';

restore headeronly
  from disk = N'C:\\Backups\\Bookstore_Full.bak';

restore verifyonly
  from disk = N'C:\\Backups\\Bookstore_Full.bak';

drop database Bookstore;

drop database if exists Bookstore;

drop database Bookstore, BookstoreDev;"
`;

exports[`fixtures > admin/create-database.sql 1`] = `
"create database SalesDB;

create database SalesDB collate Latin1_General_CI_AS;

create database SalesSnap as snapshot of SalesDB;

drop database SalesDB;

drop database if exists SalesDB;"
`;

exports[`fixtures > admin/statistics.sql 1`] = `
"create statistics stat1
on dbo.Orders (OrderDate);

create statistics stat2
on dbo.Orders (CustomerId, OrderDate)
with fullscan;

create statistics stat3
on dbo.Orders (Status)
where Status = 'Active'
with sample 50 percent, norecompute;

update statistics dbo.Orders;

update statistics dbo.Orders (stat1);

update statistics dbo.Orders
with fullscan;

update statistics dbo.Orders (stat1, stat2)
with norecompute;

drop statistics dbo.Orders.stat1;

drop statistics dbo.Orders.stat1,
dbo.Orders.stat2;"
`;

exports[`fixtures > alter-table/add-column.sql 1`] = `
"alter table Books
add
  Isbn nvarchar(20) null,
  Summary nvarchar(max) null;"
`;

exports[`fixtures > alter-table/alter-column.sql 1`] = `
"alter table Books
alter column Title nvarchar(500) null;

alter table Books
alter column Price decimal(12, 2) not null;

alter table Books
alter column Code varchar(20);"
`;

exports[`fixtures > alter-table/constraints.sql 1`] = `
"alter table Books
add constraint UQ_Books_Isbn unique (Isbn);

alter table Orders
add constraint FK_Orders_Customers
  foreign key (CustomerId) references Customers (Id)
  on delete cascade
  on update no action;

alter table Books
add constraint CK_Books_Price check (Price > 0);

alter table Books
drop constraint UQ_Books_Isbn;

alter table Books
drop constraint if exists CK_Books_Price;

alter table Orders
with check
add constraint FK_Orders_Customers
  foreign key (CustomerId) references Customers (Id);

alter table Orders
nocheck constraint FK_Orders_Customers;

alter table Orders
check constraint all;"
`;

exports[`fixtures > alter-table/drop-column.sql 1`] = `
"alter table Books
drop column Isbn, Summary;"
`;

exports[`fixtures > alter-table/set-rebuild-switch.sql 1`] = `
"alter table Orders
set (lock_escalation = auto);

alter table Orders
set (lock_escalation = disable);

alter table Orders
rebuild partition = all;

alter table Orders
rebuild partition = 3 with (data_compression = row);

alter table Orders
switch partition 3 to ArchivedOrders partition 1;

alter table Orders
switch to ArchivedOrders;"
`;

exports[`fixtures > create-table/basic.sql 1`] = `
"create table Books (
  Id int identity(1, 1) not null,
  Title nvarchar(200) not null,
  Price decimal(10, 2) not null,
  InStock bit default 1 not null,
  PublishedDate datetime2 default getdate() not null,
  constraint PK_Books primary key (Id)
);"
`;

exports[`fixtures > create-table/computed-columns.sql 1`] = `
"create table OrderItems (
  Id int identity(1, 1) not null,
  Quantity int not null,
  UnitPrice decimal(10, 2) not null,
  LineTotal as Quantity * UnitPrice,
  constraint PK_OrderItems primary key (Id)
);

create table Products (
  Id int identity(1, 1) not null,
  Name nvarchar(200) not null,
  Price decimal(10, 2) not null,
  PriceWithTax as Price * 1.1 persisted,
  constraint PK_Products primary key (Id)
);"
`;

exports[`fixtures > create-table/with-constraints.sql 1`] = `
"create table Orders (
  Id int identity(1, 1) not null,
  CustomerId int not null,
  Total decimal(18, 2) not null,
  Status nvarchar(50) default 'pending' not null,
  OrderDate datetime2 default getdate() not null,
  constraint PK_Orders primary key (Id),
  constraint FK_Orders_Customers
    foreign key (CustomerId) references Customers (Id),
  constraint CK_Orders_Total check (Total >= 0)
);

-- inline column-level CHECK (previously silently dropped)
create table Products (
  Id int not null,
  Status tinyint not null check (Status in (0, 1, 2)),
  Rating decimal(3, 1) check (Rating between 0 and 10),
  constraint PK_Products primary key (Id)
);

-- CLUSTERED/NONCLUSTERED and DESC column sort order must be preserved
create table Events (
  Id bigint not null,
  OccurredAt datetime2 not null,
  EventType tinyint not null,
  constraint PK_Events primary key clustered (Id, OccurredAt desc),
  constraint UQ_Events unique nonclustered (EventType, Id)
);"
`;

exports[`fixtures > create-table/with-indexes.sql 1`] = `
"create table Products (
  Id int identity(1, 1) not null,
  Sku nvarchar(50) not null,
  Name nvarchar(200) not null,
  Price decimal(10, 2) not null,
  constraint PK_Products primary key (Id),
  constraint UQ_Products_Sku unique (Sku)
);

create table OrderItems (
  Id int identity(1, 1) not null,
  OrderId int not null,
  ProductId int not null,
  Quantity int default 1 not null,
  constraint PK_OrderItems primary key (Id),
  constraint FK_OrderItems_Orders foreign key (OrderId) references Orders (Id),
  constraint FK_OrderItems_Products
    foreign key (ProductId) references Products (Id)
);"
`;

exports[`fixtures > create-table/with-options.sql 1`] = `
"create table ArchivedOrders (
  Id int not null,
  CustomerId int not null,
  Total decimal(18, 2) not null,
  constraint PK_ArchivedOrders primary key (Id)
)
with (data_compression = page);

create table BigData (
  Id int not null,
  Payload nvarchar(max) null,
  constraint PK_BigData primary key (Id)
)
with (data_compression = row, memory_optimized = off);"
`;

exports[`fixtures > ddl/schema.sql 1`] = `
"create schema sales;
go

create schema sales authorization dbo;
go

alter schema sales transfer dbo.Books;
go

alter schema sales transfer type::dbo.BookTitle;
go

drop schema sales;
go

drop schema if exists sales;
go

create synonym MyAlias for dbo.Books;
go

create synonym dbo.MyAlias for dbo.Books;
go

drop synonym MyAlias;
go

drop synonym if exists dbo.MyAlias;
go"
`;

exports[`fixtures > delete/basic.sql 1`] = `
"delete from Books
where
  InStock = 0
  and PublishedDate < dateadd(year, -10, getdate());"
`;

exports[`fixtures > delete/cte.sql 1`] = `
"with
  cte as (
    select Id
    from Books
    where InStock = 0
  )
delete Books
from
  Books
  inner join cte on Books.Id = cte.Id;

with
  old as (
    select Id
    from OrderItems
    where OrderId = 99
  )
delete from old;"
`;

exports[`fixtures > dml/bulk-insert.sql 1`] = `
"bulk insert Books
from 'C:\\data\\books.csv';

bulk insert Books
from 'C:\\data\\books.csv'
with (
  fieldterminator = ',',
  rowterminator = '\\n',
  firstrow = 2
);

bulk insert Orders
from 'C:\\data\\orders.csv'
with (
  fieldterminator = '|',
  rowterminator = '\\n',
  firstrow = 2,
  maxerrors = 10
);"
`;

exports[`fixtures > execute/dynamic-sql.sql 1`] = `
"execute (@sql);

execute (@sql1 + @sql2);"
`;

exports[`fixtures > execute/execute-as.sql 1`] = `
"execute as caller;

execute as user = 'dbo';

execute as login = 'sa';

execute as caller with no revert;

revert;
go

create procedure dbo.GetBooks
with encryption
as
begin
  select BookId
  from Books;
end;
go

create procedure dbo.RefreshCache
with recompile
as
begin
  select 1;
end;
go

create procedure dbo.SecureProc
with execute as owner
as
begin
  select BookId
  from Books;
end;
go"
`;

exports[`fixtures > execute/proc-call.sql 1`] = `
"execute dbo.GetAvailableBooks;

execute dbo.GetBooksByGenre
  @GenreId = 3;

execute dbo.UpdateBookPrice
  @BookId = 42,
  @NewPrice = 19.99;

execute dbo.GetCount
  @Result = @count output;"
`;

exports[`fixtures > execute/proc-variable.sql 1`] = `
"execute @procName;

execute @procName
  @param1,
  @param2;"
`;

exports[`fixtures > function/multi-statement-tvf.sql 1`] = `
"create function GetTopBooks(@MaxPrice decimal(10, 2)) returns @result table (
  Id int not null,
  Title nvarchar(200) not null,
  Price decimal(10, 2) not null
)
as
begin
  insert into @result
  select
    Id,
    Title,
    Price
  from Books
  where Price <= @MaxPrice
  order by Price asc;

  return;
end;
go"
`;

exports[`fixtures > function/scalar.sql 1`] = `
"create function GetAuthorFullName(
  @FirstName nvarchar(50),
  @LastName nvarchar(50)
) returns nvarchar(101)
as
begin
  return @FirstName + ' ' + @LastName;
end;
go"
`;

exports[`fixtures > function/table-valued.sql 1`] = `
"create function GetBooksByGenre(@GenreId int) returns table
as
return (
  select
    Id,
    Title,
    Price
  from Books
  where
    GenreId = @GenreId
    and InStock = 1
);
go"
`;

exports[`fixtures > function/trim.sql 1`] = `
"create function dbo.TrimCharsFrom(@str nvarchar(max)) returns nvarchar(max)
as
begin
  return trim(nchar(12288) from @str);
end;
go"
`;

exports[`fixtures > index/basic.sql 1`] = `
"create index IX_Books_Title
  on Books (
    Title asc
  );

create unique index UX_Books_Isbn
  on Books (
    Isbn asc
  );

create clustered index CX_Orders_Date
  on Orders (
    OrderDate desc
  );

create index IX_Books_Genre_Price
  on Books (
    GenreId asc,
    Price desc
  )
  include (Title, InStock);

create unique index UX_Authors_Email
  on Authors (
    Email asc
  )
  where Email is not null;

alter index IX_Books_Title on Books rebuild;

alter index IX_Books_Genre_Price on Books reorganize;

alter index all on Books disable;

drop index IX_Books_Title on Books;

drop index if exists IX_Books_Title on Books;"
`;

exports[`fixtures > index/columnstore.sql 1`] = `
"create clustered columnstore index cci
on dbo.Orders;

create nonclustered columnstore index ncci
on dbo.Orders (CustomerId, OrderDate, Total);

create nonclustered columnstore index ncci_filtered
on dbo.Orders (CustomerId, OrderDate)
where Status = 'Closed'
with (drop_existing = on);"
`;

exports[`fixtures > insert/cte.sql 1`] = `
"with
  src as (
    select
      Id,
      Title
    from StagingBooks
  )
insert into Books (Id, Title)
select
  Id,
  Title
from src;"
`;

exports[`fixtures > insert/select-into.sql 1`] = `
"insert into ArchivedBooks (Id, Title, Price)
select
  Id,
  Title,
  Price
from Books
where InStock = 0;"
`;

exports[`fixtures > merge/basic.sql 1`] = `
"merge into Books as tgt
using (
  select
    Id,
    Title,
    Price,
    InStock
  from BookUpdates
) as src on tgt.Id = src.Id
when matched and src.InStock = 0 then
  delete
when matched then
  update set
    tgt.Title = src.Title,
    tgt.Price = src.Price,
    tgt.InStock = src.InStock
when not matched by target then
  insert (Title, Price, InStock)
  values (src.Title, src.Price, src.InStock);

merge into Books as tgt
using BookUpdates as src on tgt.Id = src.Id
when matched and tgt.Price <> src.Price then
  update set tgt.Price = src.Price
when not matched by target then
  insert (Title, Price, InStock)
  values (src.Title, src.Price, 1)
when not matched by source then
  update set tgt.InStock = 0;

merge into Books as tgt
using BookUpdates as src on tgt.Id = src.Id
when matched then
  update set
    tgt.Title = src.Title,
    tgt.Price = src.Price
when not matched by target then
  insert (Title, Price, InStock)
  values (src.Title, src.Price, src.InStock)
output $action, inserted.Id, inserted.Title, deleted.Price;"
`;

exports[`fixtures > partition/basic.sql 1`] = `
"create partition function pf_OrderDate (datetime2) as range right
  for values ('2021-01-01', '2022-01-01', '2023-01-01', '2024-01-01');

create partition function pf_Price (decimal(10, 2)) as range left
  for values (100, 500, 1000, 5000);

alter partition function pf_OrderDate()
  split range ('2025-01-01');

alter partition function pf_OrderDate()
  merge range ('2021-01-01');

drop partition function pf_Price;

create partition scheme ps_OrderDate
  as partition pf_OrderDate
  to ([PRIMARY], fg2021, fg2022, fg2023, fg2024, fg2025);

create partition scheme ps_OrderDateArchive
  as partition pf_OrderDate
  all to ([PRIMARY]);

alter partition scheme ps_OrderDate
  next used fg2026;

drop partition scheme ps_OrderDate;"
`;

exports[`fixtures > procedural/control-flow.sql 1`] = `
"declare @price decimal(10, 2) = 29.99;

declare @title nvarchar(200);

declare @count int;

set @count = (
  select count(*)
  from Books
  where InStock = 1
);

if @count > 0
begin
  set @title = 'Books available';
end
else
begin
  set @title = 'No books available';
end

if @price < 10
  set @title = 'cheap';
else if @price < 50
  set @title = 'mid-range';
else
  set @title = 'expensive';

while @count > 0
begin
  set @count = @count - 1;

  if @count = 5
    continue;

  if @count = 0
    break;
end

begin try
  insert into Books (Title, Price, InStock)
  values ('New Book', 19.99, 1);
end try
begin catch
  declare @msg nvarchar(4000) = error_message();

  declare @sev int = error_severity();

  declare @state int = error_state();

  raiserror (@msg, @sev, @state);
end catch

goto Cleanup;

Cleanup:

print 'done';

return;"
`;

exports[`fixtures > procedural/cursors.sql 1`] = `
"declare @bookId int;

declare @title nvarchar(200);

declare @price decimal(10, 2);

declare BookCursor cursor
for
select
  Id,
  Title,
  Price
from Books
where InStock = 1
order by Title asc;

open BookCursor;

fetch next from BookCursor into @bookId, @title, @price;

while @@fetch_status = 0
begin
  print @title;

  fetch next from BookCursor into @bookId, @title, @price;
end

close BookCursor;

deallocate BookCursor;

declare ScrollCursor SCROLL cursor
for
select
  Id,
  Title
from Books
order by Id asc;

open ScrollCursor;

fetch first from ScrollCursor into @bookId, @title;

fetch last from ScrollCursor into @bookId, @title;

fetch absolute 5 from ScrollCursor into @bookId, @title;

fetch relative -2 from ScrollCursor into @bookId, @title;

fetch prior from ScrollCursor into @bookId, @title;

close ScrollCursor;

deallocate ScrollCursor;"
`;

exports[`fixtures > procedural/operational.sql 1`] = `
"save transaction SavePoint1;

save transaction @sp;

checkpoint;

checkpoint 5;

kill 52;

kill 52 with statusonly;

reconfigure;

reconfigure with override;"
`;

exports[`fixtures > procedural/transactions.sql 1`] = `
"begin transaction;

begin transaction SaveOrder;

save transaction BeforeSave;

rollback transaction;

rollback transaction BeforeSave;

commit transaction;

commit transaction SaveOrder;

begin try
  begin transaction;

  insert into Orders (CustomerId, Total)
  values (1, 99.99);

  commit transaction;
end try
begin catch
  rollback transaction throw;
end catch

set transaction isolation level read committed;

set transaction isolation level serializable;

set transaction isolation level snapshot;"
`;

exports[`fixtures > security/alter-authorization.sql 1`] = `
"alter authorization
on schema::Sales
to Mary;

alter authorization
on dbo.Orders
to Mary;

alter authorization
on object::dbo.Orders
to dbo;

alter authorization
on database::Bookstore
to sa;"
`;

exports[`fixtures > security/grants.sql 1`] = `
"create user AppUser
for login AppLogin;

create user ReportUser
without login
with default_schema = dbo;

alter user AppUser
with name = NewAppUser, default_schema = sales;

drop user AppUser;

drop user if exists AppUser;

create login AppLogin
with password = 'Str0ngP@ssw0rd!';

create login DomainUser
from windows
with default_database = AdventureWorks;

alter login AppLogin
with password = 'NewP@ssw0rd!' old_password = 'Str0ngP@ssw0rd!';

alter login AppLogin enable;

drop login AppLogin;

create role db_reader
authorization dbo;

alter role db_reader
add member AppUser;

alter role db_reader
drop member AppUser;

drop role db_reader;

grant select
on dbo.Books
to AppUser;

grant select, insert, update
on dbo.Books
to AppUser, ReportUser;

grant select
on dbo.Books (Title, Price)
to ReportUser;

grant execute
on dbo.GetAvailableBooks
to AppUser
with grant option;

deny delete
on dbo.Books
to AppUser;

revoke select
on dbo.Books
from AppUser;

revoke select
on dbo.Books
from AppUser
cascade;

grant select, insert, update, delete
on schema::dbo
to AppUser;

grant control
on database::AdventureWorks
to AppUser;"
`;

exports[`fixtures > security/users-roles.sql 1`] = `
"create user AppUser
for login AppLogin
with default_schema = dbo;

create user ReportUser
without login
with default_schema = reporting;

create user ExternalUser
from external provider;

alter user AppUser
with name = NewAppUser;

alter user AppUser
with default_schema = sales;

create role ReadOnly;

create role DataReader
authorization dbo;

alter role ReadOnly
add member AppUser;

alter role ReadOnly
drop member AppUser;

alter role ReadOnly
with name = db_readonly;

drop role ReadOnly;

drop role if exists db_readonly;

grant select, insert, update
on schema::dbo
to AppUser;

grant control
on database::AdventureWorks
to AppUser;

grant impersonate
on login::ServiceLogin
to AppUser;

deny delete
on object::dbo.AuditLog
to AppUser;

revoke select
on schema::dbo
from AppUser
cascade;

grant select
on dbo.Books (Title, Price)
to ReportUser;

grant execute
on dbo.GetAvailableBooks
to AppUser
with grant option;"
`;

exports[`fixtures > select/basic.sql 1`] = `
"select
  Books.Id,
  Books.Title,
  Authors.FirstName
from
  Books
  inner join Authors on Books.AuthorId = Authors.Id
where Books.InStock = 1
order by Books.Title asc;"
`;

exports[`fixtures > select/comments.sql 1`] = `
"select Id
from Books
where
  InStock = 1
  -- and Price < 20
  and GenreId = 1;

select BookId
from Books
where
  1 = 1
  and Books.GenreId in (1)
  --and Books.GenreId in (select GenreId from Genres where Name = 'Fiction')
  and Books.PublisherId in (4)
  --and Books.PublisherId in (select PublisherId from Publishers where Country = 'UK')
  and Books.AuthorId in (101, 102);

select
  b.BookId,
  b.Title
from
  Books as b
  inner join Authors as a on b.AuthorId = a.Id
  -- left join: publishers may not exist for all books
  left join Publishers as p on b.PublisherId = p.Id;

select b.BookId
from
  Books as b
  inner join Authors as a on b.AuthorId = a.Id
  -- optional: genre
  left join Genres as g on b.GenreId = g.Id
  -- optional: publisher
  left join Publishers as p on b.PublisherId = p.Id;

select BookId
from Books;
/* end of queries */"
`;

exports[`fixtures > select/expressions.sql 1`] = `
"select
  current_timestamp,
  current_user,
  session_user,
  system_user;

select $PARTITION.PF_OrderDate(OrderDate)
from Orders;

insert into Books (Title, Price, InStock)
values ('Clean Code', 39.99, default);

select
  identity(int, 1, 1) as Id,
  Name
into #Temp
from Source;

select next value for dbo.OrderSeq;

select next value for dbo.OrderSeq over (order by Id asc);

select parse('2023-01-01' as date);

select parse('3.14' as decimal(10, 2) using 'en-US');

select try_parse('abc' as int);

select try_parse('2023-01-01' as date using 'en-US');

select string_agg(Name, ', ') within group (order by Name asc)
from Authors;

select percentile_cont(0.5) within group (order by Salary asc) over (
  partition by Department
)
from Employees;

select top (10) with ties
  Id,
  Title,
  Price
from Books
order by Price desc;

select top (10) percent
  Id,
  Title
from Books
order by Price desc;

select 1
where a is distinct from b;

select 1
where a is not distinct from b;

-- N-prefix (unicode) string literals must be preserved
select
  N'unicode string',
  'regular string',
  N'unicode' + 'concat'
from t
where col = N'filter value';

-- Binary literals (0x prefix must not be doubled)
select
  0x1A2B3C,
  0xDEADBEEF
from t;

-- Escaped single quotes in string literals
select
  'it''s a test',
  N'it''s unicode'
from t;

-- COLLATE clause on column references
select
  Name collate Latin1_General_CI_AS,
  Code collate SQL_Latin1_General_CP1_CS_AS
from Products
where Name collate SQL_Latin1_General_CP1_CI_AS = N'test';

-- LEFT/RIGHT are special ScriptDom subtypes — must normalize case like any function
select
  left(Email, 10),
  right(Name, 5),
  left(a, 1) + right(b, 2)
from Users;"
`;

exports[`fixtures > select/for-xml-json.sql 1`] = `
"select
  Id,
  Title,
  Price
from Books
for xml auto;

select
  Id,
  Title,
  Price
from Books
for xml path('Book'), root('Books'), type;

select
  Id,
  Name,
  Category
from Products
for xml raw('Product'), elements, root('Catalog');

select
  OrderId,
  CustomerId,
  Total
from Orders
for json auto;

select
  Id,
  Title as name,
  Price as price
from Books
for json path, root('Books'), include_null_values;

select
  Id,
  Title
from Books
for json path, without_array_wrapper;

select *
from Books
for browse;"
`;

exports[`fixtures > select/full-text.sql 1`] = `
"select
  BookId,
  Title
from Books
where contains(Title, '"SQL Server"');

select
  BookId,
  Title
from Books
where freetext(Title, 'database programming');

select BookId
from Books
where contains(*, 'programming');

select BookId
from Books
where contains((Title, AuthorId), 'design');

select BookId
from Books
where contains(Title, 'query', language 1033);

select
  b.BookId,
  b.Title,
  ft.rank
from
  Books as b
  inner join containstable(Books, Title, '"SQL"') as ft on b.BookId = ft.[key];

select
  b.BookId,
  ft.rank
from
  Books as b
  inner join freetexttable(Books, *, 'programming', 10) as ft on
    b.BookId = ft.[key];"
`;

exports[`fixtures > select/inline-values.sql 1`] = `
"select
  v.Id,
  v.Name
from (values (1, 'Alice'), (2, 'Bob')) as v(Id, Name);

select v.Id
from (values (1), (2), (3)) as v(Id);

select
  p.ProductId,
  p.Price
from (values (101, 9.99), (102, 14.99), (103, 4.99)) as p(ProductId, Price)
where p.Price < 10;"
`;

exports[`fixtures > select/joins.sql 1`] = `
"-- INNER JOIN (keyword form)
select
  b.Id,
  b.Title,
  a.LastName
from
  Books as b
  inner join Authors as a on b.AuthorId = a.Id
where b.InStock = 1
order by b.Title asc;

-- LEFT JOIN with aliased columns
select
  b.Title,
  p.Name as Publisher
from
  Books as b
  left join Publishers as p on b.PublisherId = p.Id;

-- FULL OUTER JOIN
select
  b.Title,
  a.LastName
from
  Books as b
  full join Authors as a on b.AuthorId = a.Id;

-- Multiple joins on the same table
select
  b.Title,
  a.LastName,
  p.Name as Publisher,
  g.Name as Genre
from
  Books as b
  inner join Authors as a on b.AuthorId = a.Id
  inner join Publishers as p on b.PublisherId = p.Id
  inner join Genres as g on b.GenreId = g.Id
where b.InStock = 1;

-- JOIN with multiple ON predicates (AND)
select
  b.Title,
  oi.Quantity
from
  Books as b
  inner join OrderItems as oi on
    b.Id = oi.BookId
    and oi.UnitPrice > 10
    and oi.Quantity > 1;

-- Self-join
select
  b1.Title as Original,
  b2.Title as Companion
from
  Books as b1
  inner join Books as b2 on
    b1.AuthorId = b2.AuthorId
    and b1.Id <> b2.Id;

-- CROSS APPLY
select
  b.Title,
  top5.OrderId
from
  Books as b
  cross apply (
    select top (5) OrderId
    from OrderItems
    where BookId = b.Id
    order by UnitPrice desc
  ) as top5;

-- OUTER APPLY
select
  b.Title,
  latest.OrderId
from
  Books as b
  outer apply (
    select top (1) OrderId
    from OrderItems
    where BookId = b.Id
    order by UnitPrice desc
  ) as latest;

-- JOIN with table hint
select
  b.Title,
  a.LastName
from
  Books as b with (nolock)
  inner join Authors as a with (nolock) on b.AuthorId = a.Id;

-- Three-way join with WHERE and ORDER BY
select
  b.Title,
  a.LastName,
  o.Total
from
  Orders as o
  inner join OrderItems as oi on o.Id = oi.OrderId
  inner join Books as b on oi.BookId = b.Id
  inner join Authors as a on b.AuthorId = a.Id
where o.Status = 'Shipped'
order by
  o.OrderDate desc,
  b.Title asc;

-- UPDATE with JOIN (join-based update)
update Books
set InStock = 0
from
  Books as b
  inner join Publishers as p on b.PublisherId = p.Id
where p.Country = 'UK';"
`;

exports[`fixtures > select/json-constructors.sql 1`] = `
"select json_object('name': Title, 'price': Price)
from Books;

select json_object('name': Title, 'price': Price absent on null)
from Books;

select json_object('id': Id null on null)
from Books;

select json_array(1, 2, 'three');

select json_array(1, 2, 'three' absent on null);

select json_arrayagg(Title)
from Books;

select json_arrayagg(Title order by Title asc)
from Books;

select json_arrayagg(Title order by Title asc absent on null)
from Books;"
`;

exports[`fixtures > select/option-clause.sql 1`] = `
"select
  BookId,
  Title
from Books
where InStock = 1
option (recompile);

select BookId
from Books
option (recompile);

select
  BookId,
  Title
from Books
where InStock = 1
order by Title asc
option (recompile);

select BookId
from Books
option (maxdop 4);

select BookId
from Books
option (recompile, maxdop 4);"
`;

exports[`fixtures > select/pagination.sql 1`] = `
"-- OFFSET/FETCH NEXT (keyset pagination)
select
  Id,
  Title
from Books
order by Title asc
offset 10 rows
fetch next 20 rows only;

-- OFFSET only (no FETCH)
select
  Id,
  Title
from Books
order by Title asc
offset 0 rows;

-- parametric pagination
select
  Id,
  Title,
  Price,
  AuthorId
from Books
where InStock = 1
order by
  Title asc,
  Price desc
offset @skip rows
fetch next @take rows only;

-- ORDER BY + OFFSET on UNION ALL result
select
  Id,
  Title
from Books

union all

select
  Id,
  Title
from ArchivedBooks
order by Title asc
offset 0 rows
fetch next 10 rows only;"
`;

exports[`fixtures > select/pivot-unpivot.sql 1`] = `
"select *
from Sales
pivot (
  sum(Amount)
  for Quarter in ([Q1], [Q2], [Q3], [Q4])
) as PivotTable;

select
  CustomerId,
  [2022],
  [2023],
  [2024]
from (
  select
    CustomerId,
    year(OrderDate) as OrderYear,
    Total
  from Orders
) as src
pivot (
  sum(Total)
  for OrderYear in ([2022], [2023], [2024])
) as YearlyTotals;

select *
from PivotedSales
unpivot (
  Amount for Quarter in (Q1, Q2, Q3, Q4)
) as UnpivotTable;"
`;

exports[`fixtures > select/quoted-identifiers.sql 1`] = `
"-- Brackets stripped when not needed
select
  Books.Id,
  Books.Title
from Books
where Books.InStock = 1;

-- Brackets preserved when name contains spaces
select
  [My Table].[Book Id],
  [My Table].[Book Title]
from [My Table];

-- Brackets preserved when name starts with digit
select [123abc]
from [My Schema].[My Table];

-- Mixed: some need brackets, some don't
select
  Books.Id,
  [My Table].[Book Title]
from
  Books
  inner join [My Table] on Books.Id = [My Table].[Book Id];"
`;

exports[`fixtures > select/rowset-functions.sql 1`] = `
"select
  j.[key],
  j.[value]
from
  Orders as o
  cross apply openjson(o.JsonData) as j
where o.id = 1;

select
  j.OrderId,
  j.amount
from
  Orders as o
  cross apply openjson(o.JsonData, '$.items') with (
    OrderId int '$.id',
    amount decimal(10,2) '$.amount',
    notes nvarchar(500) '$.notes'
  ) as j;

select
  j.id,
  j.data
from openjson(@json) with (
  id int '$.id',
  data nvarchar(max) '$.data' as json
) as j;

select
  x.id,
  x.Name
from openxml(@hDoc, '/root/item', 2) with (
  id int '@id',
  Name varchar(100) 'Name'
) as x;

select
  r.id,
  r.Name
from openrowset(
  'SQLNCLI',
  'Server=(local);Trusted_Connection=yes;',
  'select id, Name from pubs.titles'
) as r;

select *
from openrowset(
  bulk 'C:\\data\\file.csv',
  formatfile='C:\\data\\fmt.xml',
  firstrow=2
) as t;

select *
from openrowset(bulk 'C:\\data\\data.json', single_blob) as j;

-- Built-in TVFs (BuiltInFunctionTableReference) — must normalize case
select [value]
from string_split(@csv, ',');

select [value]
from string_split(@csv, ',') as s;

select *
from generate_series(1, 100) as n;

-- OPENQUERY
select *
from openquery(RemoteServer, 'SELECT Id, Name FROM dbo.Customers');"
`;

exports[`fixtures > select/select-into.sql 1`] = `
"-- SELECT INTO — the INTO target must appear between column list and FROM
select
  Id,
  Name,
  Email
into #TempCustomers
from Customers
where IsActive = 1;

select top (10)
  Id,
  Name
into #TopCustomers
from Customers
order by Name asc;

select
  Id,
  Name
into dbo.Archive
from Customers
where IsActive = 0;"
`;

exports[`fixtures > select/subquery.sql 1`] = `
"select
  Id,
  Title
from Books
where
  Id in (
    select BookId
    from OrderItems
    where UnitPrice > 50
  )
  and GenreId = (
    select Id
    from Genres
    where Name = 'Fiction'
  );"
`;

exports[`fixtures > select/tablesample-temporal.sql 1`] = `
"select *
from BigTable tablesample (10 percent);

select *
from BigTable tablesample (1000 rows);

select *
from BigTable tablesample system (10 percent) repeatable (42);

select
  Id,
  Name
from dbo.Employee for system_time as of '2023-01-01';

select
  Id,
  Name
from dbo.Employee for system_time from '2022-01-01' to '2023-01-01';

select
  Id,
  Name
from dbo.Employee for system_time between '2022-01-01' and '2023-01-01';

select
  Id,
  Name
from dbo.Employee for system_time contained in ('2022-01-01', '2023-01-01');

select
  Id,
  Name
from dbo.Employee for system_time all;"
`;

exports[`fixtures > select/window.sql 1`] = `
"select
  Id,
  Title,
  Price,
  row_number() over (
    partition by GenreId
    order by Price desc
  ) as Rn,
  rank() over (
    partition by GenreId
    order by Price desc
  ) as Rnk,
  sum(Price) over (partition by GenreId) as GenreTotal
from Books;"
`;

exports[`fixtures > select/window-advanced.sql 1`] = `
"select first_value(Price) ignore nulls over (
  partition by AuthorId
  order by PublishedDate asc
)
from Books;

select last_value(Price) respect nulls over (order by PublishedDate asc)
from Books;

select first_value(Price) ignore nulls over (
  partition by AuthorId
  order by PublishedDate asc
  rows between unbounded preceding and current row
)
from Books;

select last_value(Price) ignore nulls over w
from Books
window w as (
  partition by AuthorId
  order by PublishedDate asc
);"
`;

exports[`fixtures > sequence/basic.sql 1`] = `
"create sequence OrderSeq as int
  start with 1
  increment by 1;

create sequence dbo.InvoiceSeq as bigint
  start with 1000
  increment by 1
  minvalue 1000
  maxvalue 9999999
  no cycle
  cache 50;

alter sequence OrderSeq
  restart with 1;

alter sequence dbo.InvoiceSeq
  increment by 10
  maxvalue 99999999
  cycle
  cache 100;

drop sequence OrderSeq;

drop sequence if exists OrderSeq;

drop sequence dbo.InvoiceSeq, dbo.OrderSeq;"
`;

exports[`fixtures > stored-proc/basic.sql 1`] = `
"create procedure GetAvailableBooks
as
begin
  select
    Id,
    Title,
    Price
  from Books
  where InStock = 1
  order by Title asc;
end;
go"
`;

exports[`fixtures > stored-proc/comments.sql 1`] = `
"create procedure GetBookById
/**********************
** Author: Jon
** Date:   2012-01-10
**********************/
  @Id int,
  @IncludeOutOfStock bit = 0
as
begin
  select BookId
  from Books
  where BookId = @Id;
end;
go

create procedure GetAvailableBooks
as
begin
  -- fetch available books only
  select
    BookId,
    Title
  from Books
  where InStock = 1;
end;
go

create procedure GetBookByIdV2
  @Id int,
  @Active bit
/*WITH ENCRYPTION*/
as
begin
  select BookId
  from Books
  where BookId = @Id;
end;
go"
`;

exports[`fixtures > stored-proc/with-params.sql 1`] = `
"create procedure GetBookById
  @BookId int,
  @IncludeOutOfStock bit = 0
as
begin
  select
    Id,
    Title,
    Price,
    InStock
  from Books
  where
    Id = @BookId
    and (
      InStock = 1
      or @IncludeOutOfStock = 1
    );
end;
go"
`;

exports[`fixtures > trigger/after-insert.sql 1`] = `
"create trigger BooksAfterInsert
on Books
after insert
as
begin
  insert into AuditLog (TableName, Action, RecordId, ChangedAt)
  select
    'Books',
    'INSERT',
    Id,
    getdate()
  from inserted;
end;
go"
`;

exports[`fixtures > trigger/enable-disable.sql 1`] = `
"enable trigger tr1
on dbo.Orders;

disable trigger tr1
on dbo.Orders;

enable trigger tr1, tr2
on dbo.Orders;

disable trigger all
on dbo.Orders;

enable trigger all
on database;

disable trigger all
on all server;"
`;

exports[`fixtures > trigger/instead-of-delete.sql 1`] = `
"create trigger BooksInsteadOfDelete
on Books
instead of delete
as
begin
  update Books
  set
    IsDeleted = 1,
    DeletedAt = getdate()
  where Id in (
    select Id
    from deleted
  );
end;
go"
`;

exports[`fixtures > type/basic.sql 1`] = `
"create type dbo.BookTitle from nvarchar(200) not null;

create type dbo.Price from decimal(10, 2) null;

create type dbo.BookTableType as table (
  Id int not null,
  Title nvarchar(200) not null,
  Price decimal(10, 2) not null,
  InStock bit not null
);

create type dbo.OrderLineType as table (
  LineId int not null,
  BookId int not null,
  Quantity int not null,
  UnitPrice decimal(10, 2) not null
);"
`;

exports[`fixtures > type/table-types.sql 1`] = `
"create type dbo.IdList as table (
  Id int not null primary key
);

create type dbo.NameValuePair as table (
  Name nvarchar(100) not null,
  [Value] nvarchar(500) null
);

create type dbo.OrderLine as table (
  LineId int not null primary key,
  ProductId int not null,
  Quantity int default 1 not null,
  UnitPrice decimal(10, 2) not null
);

drop type dbo.IdList

drop type if exists dbo.NameValuePair"
`;

exports[`fixtures > update/basic.sql 1`] = `
"update Books
set
  Title = 'Updated Title',
  Price = 29.99
where Id = 42;"
`;

exports[`fixtures > update/cte.sql 1`] = `
"with
  cte as (
    select
      Id,
      Price
    from Books
    where InStock = 1
  )
update Books
set Price = Price * 0.9
from
  Books
  inner join cte on Books.Id = cte.Id;

with
  cte as (
    select
      Id,
      Price,
      row_number() over (
        partition by AuthorId
        order by Price desc
      ) as rn
    from Books
  )
update cte
set Price = Price * 0.9
where rn = 1;"
`;

exports[`fixtures > update/join-update.sql 1`] = `
"update Books
set InStock = 0
from
  Books
  inner join Publishers on Books.PublisherId = Publishers.Id
where Publishers.Country = 'UK';"
`;

exports[`fixtures > view/basic.sql 1`] = `
"create view AvailableBooks
as
select
  b.Id,
  b.Title,
  b.Price,
  a.Name as AuthorName
from
  Books as b
  inner join Authors as a on b.AuthorId = a.Id
where b.InStock = 1;
go"
`;

exports[`fixtures > view/comments.sql 1`] = `
"create or alter view dbo.ExampleView
/* with encryption */
as
select BookId
from Books;
go

-- view description
create or alter view TestBooksView
as
select 1 as x;
go

create or alter view BooksView
/* with encryption */
as
select 1 as x;
go

create or alter view AuthorsView
as
select 2 as y;
go"
`;

exports[`fixtures > view/schemabinding.sql 1`] = `
"create view dbo.BookSummary
with schemabinding
as
select
  b.Id,
  b.Title,
  b.Price
from dbo.Books as b;
go"
`;

exports[`options > sqlCommaStyle: leading 1`] = `
"select
  BookId
  , Title
  , Price
  , AuthorId
  , InStock
from Books
where InStock = 1;"
`;

exports[`options > sqlCommaStyle: trailing (default) 1`] = `
"select
  BookId,
  Title,
  Price,
  AuthorId,
  InStock
from Books
where InStock = 1;"
`;

exports[`options > sqlDensity: compact (group by wrapping) 1`] = `
"select CustomerId,
  ProductCategoryId,
  RegionId,
  sum(TotalAmount) as Revenue,
  count(*) as OrderCount
from Orders
group by CustomerId, ProductCategoryId, RegionId;"
`;

exports[`options > sqlDensity: compact (wrapping columns) 1`] = `
"select OrderId,
  CustomerId,
  ProductId,
  Quantity,
  UnitPrice,
  TotalAmount,
  OrderDate,
  ShipDate
from Orders
where IsActive = 1;"
`;

exports[`options > sqlDensity: compact 1`] = `"select BookId from Books where InStock = 1;"`;

exports[`options > sqlDensity: spacious 1`] = `
"select
  b.BookId,
  b.Title,
  b.Price
from
  Books as b
  inner join Authors as a on
    b.AuthorId = a.Id
where
  b.InStock = 1
order by
  b.Title asc;"
`;

exports[`options > sqlKeywordCase: lower (default) 1`] = `
"select
  b.BookId,
  b.Title,
  b.Price
from
  Books as b
  inner join Authors as a on b.AuthorId = a.Id
where b.InStock = 1
order by b.Title asc;"
`;

exports[`options > sqlKeywordCase: upper 1`] = `
"SELECT
  b.BookId,
  b.Title,
  b.Price
FROM
  Books AS b
  INNER JOIN Authors AS a ON b.AuthorId = a.Id
WHERE b.InStock = 1
ORDER BY b.Title ASC;"
`;

exports[`shared fixtures > ddl/alter-table.sql 1`] = `
"alter table books
add summary varchar(500);

alter table books
add is_featured integer default 0 not null;

alter table books
drop column summary;

alter table books
add constraint uq_books_title unique (title);

alter table books
add constraint fk_books_publisher
  foreign key (publisher_id) references publishers (id);

alter table books
add constraint chk_books_stock check (in_stock >= 0);

alter table books
drop constraint uq_books_title;

alter table books
drop constraint fk_books_publisher;"
`;

exports[`shared fixtures > ddl/create-index.sql 1`] = `
"create index ix_books_author_id
  on books (
    author_id asc
  );

create unique index ux_books_title
  on books (
    title asc
  );

create index ix_books_price_desc
  on books (
    price desc
  );

create index ix_books_genre_price
  on books (
    genre_id asc,
    price desc
  );

create index ix_books_in_stock
  on books (
    author_id asc
  )
  where in_stock = 1;"
`;

exports[`shared fixtures > ddl/create-table.sql 1`] = `
"create table authors (
  id integer not null,
  first_name varchar(100) not null,
  last_name varchar(100) not null,
  country varchar(100),
  constraint pk_authors primary key (id)
);

create table books (
  id integer not null,
  title varchar(200) not null,
  author_id integer not null,
  price decimal(10, 2) not null,
  in_stock integer default 1 not null,
  constraint pk_books primary key (id),
  constraint fk_books_author foreign key (author_id) references authors (id),
  constraint chk_books_price check (price >= 0)
);

create table order_items (
  order_id integer not null,
  book_id integer not null,
  quantity integer default 1 not null,
  unit_price decimal(10, 2) not null,
  constraint pk_order_items primary key (order_id, book_id),
  constraint fk_order_items_order foreign key (order_id) references orders (id),
  constraint fk_order_items_book foreign key (book_id) references books (id)
);"
`;

exports[`shared fixtures > ddl/create-view.sql 1`] = `
"create view available_books
as
select
  id,
  title,
  price
from books
where in_stock = 1;
go"
`;

exports[`shared fixtures > ddl/drop.sql 1`] = `
"drop table temp_log;

drop table if exists temp_log;

drop view old_summary;

drop view if exists old_summary;"
`;

exports[`shared fixtures > dml/delete.sql 1`] = `
"delete from books
where
  in_stock = 0
  and price < 5;

delete from order_items
where order_id in (
  select id
  from orders
  where status = 'cancelled'
);

delete from sessions
where exists (
  select 1
  from users
  where
    users.id = sessions.user_id
    and users.active = 0
);"
`;

exports[`shared fixtures > dml/insert.sql 1`] = `
"insert into books (title, author_id, price, in_stock)
values ('The Pragmatic Programmer', 1, 39.99, 1);

insert into books (title, author_id, price, in_stock)
values
  ('Clean Code', 1, 39.99, 1),
  ('The Pragmatic Programmer', 2, 49.99, 1),
  ('Design Patterns', 3, 44.99, 0);

insert into archived_books (id, title, price)
select
  id,
  title,
  price
from books
where in_stock = 0;"
`;

exports[`shared fixtures > dml/truncate.sql 1`] = `"truncate table sessions;"`;

exports[`shared fixtures > dml/update.sql 1`] = `
"update books
set
  price = price * 0.9,
  in_stock = 1
where
  author_id = 1
  and price > 20;

update books
set in_stock = 0
from
  publishers
where
  books.publisher_id = publishers.id
  and publishers.country = 'UK';

update books
set price = (
  select avg(price)
  from books
  where author_id = 1
)
where author_id = 1;"
`;

exports[`shared fixtures > select/aggregates.sql 1`] = `
"select
  author_id,
  count(*) as book_count,
  avg(price) as avg_price
from books
where in_stock = 1
group by author_id
having count(*) > 5
order by book_count desc;"
`;

exports[`shared fixtures > select/basic.sql 1`] = `
"select
  id,
  title,
  price
from books
where in_stock = 1
order by price asc;

select
  id,
  title,
  price
from books
where
  in_stock = 1
  and price < 50
order by price desc;"
`;

exports[`shared fixtures > select/case.sql 1`] = `
"select
  id,
  case
    when price < 10 then 'Budget'
    when price < 30 then 'Mid'
    else 'Premium'
  end as tier
from books;

select
  id,
  case genre_id
    when 1 then 'Fiction'
    when 2 then 'Non-Fiction'
    else 'Other'
  end as genre
from books;"
`;

exports[`shared fixtures > select/cte.sql 1`] = `
"with
  top_authors as (
    select
      author_id,
      count(*) as book_count
    from books
    group by author_id
    having count(*) > 5
  )
select
  a.first_name,
  a.last_name,
  t.book_count
from
  authors as a
  inner join top_authors as t on a.id = t.author_id
order by t.book_count desc;

with
  bestsellers as (
    select
      author_id,
      count(*) as book_count
    from books
    where in_stock = 1
    group by author_id
  ),
  top_authors as (
    select author_id
    from bestsellers
    where book_count > 3
  )
select
  a.first_name,
  a.last_name
from
  authors as a
  inner join top_authors as t on a.id = t.author_id;"
`;

exports[`shared fixtures > select/distinct.sql 1`] = `
"select distinct author_id
from books;

select distinct
  author_id,
  genre_id
from books
order by author_id asc;"
`;

exports[`shared fixtures > select/expressions.sql 1`] = `
"select cast(price as integer)
from books;

select cast(title as varchar(100))
from books;

select coalesce(deleted_at, current_timestamp)
from books;

select nullif(price, 0)
from books;

select
  id,
  price * 1.1 as adjusted,
  price - 5.0 as discounted,
  price + 3.0 as surcharge
from books;

select
  current_timestamp,
  current_user
from books;"
`;

exports[`shared fixtures > select/group-by-advanced.sql 1`] = `
"select
  genre_id,
  sum(price) as total
from books
group by rollup(genre_id);

select
  genre_id,
  author_id,
  sum(price) as total
from books
group by cube(genre_id, author_id);

select
  genre_id,
  author_id,
  sum(price) as total
from books
group by grouping sets((genre_id, author_id), (genre_id), ());

select
  genre_id,
  author_id,
  count(*) as book_count
from books
group by rollup(genre_id, author_id);"
`;

exports[`shared fixtures > select/joins.sql 1`] = `
"select
  b.id,
  b.title,
  a.first_name,
  a.last_name
from
  books as b
  inner join authors as a on b.author_id = a.id;

select
  b.title,
  a.first_name
from
  books as b
  left join authors as a on b.author_id = a.id
where a.id is null;

select
  b.title,
  a.first_name
from
  books as b
  full join authors as a on b.author_id = a.id;

select
  b.title,
  g.name
from
  books as b
  right join genres as g on b.genre_id = g.id;

select
  b.title,
  g.name
from
  books as b
  cross join genres as g;

select
  b.title,
  recent.total
from
  books as b
  inner join (
    select
      book_id,
      sum(quantity) as total
    from order_items
    group by book_id
  ) as recent on b.id = recent.book_id;

select
  b.title,
  a.last_name,
  p.name as publisher
from
  books as b
  inner join authors as a on b.author_id = a.id
  inner join publishers as p on b.publisher_id = p.id
where b.in_stock = 1
order by
  a.last_name asc,
  b.title asc;"
`;

exports[`shared fixtures > select/predicates.sql 1`] = `
"select
  id,
  title
from books
where id in (1, 2, 3);

select
  id,
  title
from books
where id not in (1, 2, 3);

select
  id,
  title,
  price
from books
where price between 10 and 50;

select
  id,
  title,
  price
from books
where price not between 10 and 50;

select
  id,
  title
from books
where deleted_at is null;

select
  id,
  title
from books
where deleted_at is not null;

select
  id,
  title
from books
where title like 'The%';

select
  id,
  title
from books
where title not like '%old%';

select
  id,
  title
from books
where
  title like '%sql%'
  and price between 20 and 100
  and deleted_at is null;

select author_id
from authors
where country in (
  'United States',
  'United Kingdom',
  'Canada',
  'Australia',
  'Germany',
  'France',
  'Japan'
);

select
  id,
  title
from books
where
  in_stock = 1
  or deleted_at is not null;

select
  id,
  title
from books
where not (in_stock = 0);

select
  id,
  title
from books
where
  (
    price < 10
    or price > 100
  )
  and deleted_at is null;

select id
from books
where deleted_at is distinct from current_timestamp;

select id
from books
where deleted_at is not distinct from current_timestamp;"
`;

exports[`shared fixtures > select/set-ops.sql 1`] = `
"select
  id,
  name
from customers

union

select
  id,
  name
from prospects;

select
  id,
  name
from table_a

union all

select
  id,
  name
from table_b;

select product_id
from orders

intersect

select product_id
from featured_products;

select user_id
from premium_users

except

select user_id
from suspended_users;

select
  id,
  name
from customers

union

select
  id,
  name
from prospects

union

select
  id,
  name
from leads;

with
  active as (
    select
      id,
      name
    from users
    where active = 1
  )
select
  id,
  name
from active

union all

select
  id,
  name
from archived_users;"
`;

exports[`shared fixtures > select/subqueries.sql 1`] = `
"select
  id,
  title
from books
where author_id in (
  select id
  from authors
  where country = 'USA'
);

select
  id,
  title
from books
where exists (
  select 1
  from order_items
  where order_items.book_id = books.id
);

select
  id,
  title
from books
where not exists (
  select 1
  from order_items
  where order_items.book_id = books.id
);

select
  id,
  title
from books
where author_id not in (
  select author_id
  from banned_authors
);

select
  id,
  title
from books
where
  author_id in (
    select book_id
    from order_items
    where unit_price > 50
  )
  and genre_id = (
    select id
    from genres
    where name = 'Fiction'
  );

select
  id,
  title,
  price
from books as b
where price > (
  select avg(price)
  from books
  where author_id = b.author_id
);

select
  id,
  (
    select count(*)
    from order_items
    where order_items.book_id = b.id
  ) as order_count
from books as b;

select sub.avg_price
from (
  select avg(price) as avg_price
  from books
) as sub;

select
  id,
  title
from books
where price > all (
  select price
  from archived_books
);

select
  id,
  title
from books
where price = any (
  select price
  from featured_books
);"
`;

exports[`shared fixtures > select/window.sql 1`] = `
"select
  id,
  author_id,
  price,
  row_number() over (
    partition by author_id
    order by price desc
  ) as rn
from books;

select
  id,
  author_id,
  price,
  rank() over (
    partition by author_id
    order by price desc
  ) as price_rank,
  dense_rank() over (
    partition by author_id
    order by price desc
  ) as price_dense_rank,
  avg(price) over (partition by author_id) as avg_price
from books;

select
  id,
  price,
  sum(price) over (
    order by id asc
    rows between unbounded preceding and current row
  ) as running_total
from books;

select
  id,
  price,
  avg(price) over (
    order by price asc
    range between unbounded preceding and current row
  ) as running_avg
from books;

select
  id,
  price,
  sum(price) over (
    order by id asc
    rows between current row and unbounded following
  ) as suffix_sum
from books;

select
  id,
  price,
  avg(price) over (
    order by id asc
    rows between 2 preceding and 2 following
  ) as moving_avg
from books;

select
  id,
  author_id,
  count(*) over (partition by author_id) as author_book_count
from books;

select
  id,
  price,
  sum(price) over w as total,
  row_number() over w as rn
from books
window w as (
  partition by author_id
  order by price asc
);

select
  id,
  price,
  lag(price, 1) over (order by id asc) as prev_price
from books;

select
  id,
  price,
  lead(price, 1) over (order by id asc) as next_price
from books;

select
  id,
  price,
  ntile(4) over (order by price asc) as quartile
from books;

select
  id,
  price,
  first_value(price) over (
    partition by author_id
    order by id asc
  ) as first_price
from books;

select
  id,
  price,
  last_value(price) over (
    partition by author_id
    order by id asc
    rows between unbounded preceding and unbounded following
  ) as last_price
from books;"
`;
